--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,9 +3,9 @@
     <item
         android:id="@+id/home"
         android:title="Home"
-        android:icon="@drawable/ic_home_foreground"/>
+        android:icon="@drawable/ic_skills"/>
     <item
         android:id="@+id/favorite"
         android:title="Favorite"
-        android:icon="@drawable/ic_home_foreground"/>
+        android:icon="@drawable/ic_favorite_false"/>
 </menu>
